[gd_scene load_steps=2 format=3 uid="uid://dsfwrr8geg2vx"]

[ext_resource type="Script" uid="uid://k6yyuyic3nn6" path="res://src/ui/common/CardView.gd" id="1_7biid"]

[node name="CardView" type="Button"]
custom_minimum_size = Vector2(140, 200)
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_7biid")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 5.0
offset_top = 5.0
offset_right = 135.0
offset_bottom = 195.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="CardName" type="Label" parent="VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Golpe"
horizontal_alignment = 1

[node name="CardCost" type="Label" parent="VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "1"
horizontal_alignment = 1

[node name="CardDescription" type="Label" parent="VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Inflinge 6 de da√±o"
horizontal_alignment = 1
autowrap_mode = 3
